--- a/index.html
+++ b/index.html
@@ -43,7 +43,11 @@
                 <li>Clases de Cocina con Chefs Expertos</li>
             </ul>
         </div>
-        <div class="pie">© 2024 Restaurante Gusteau's - París, Francia</div>
+        <div class="pie">© 2024 Restaurante Gusteau's - París, Francia<br>
+            <a href="#sobrenosotros">Sobre Nosotros</a>
+            <a href="#menu">Menú</a>
+            <a href="#contacto">Contacto</a>
+        </div>
     </div>
 </body>
 </html>
