Encabezado del menus estrella

--- a/menu_estrella.html
+++ b/menu_estrella.html
@@ -7,14 +7,16 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <div class="encabezado">
     <header>
         <h1>Menú Estrella del Restaurante Gusteau's</h1>
     </header>
-
+    </div>
+    <div class="menu">
     <nav>
         <!-- Menú de navegación aquí, si es necesario -->
     </nav>
-
+    </div>
     <main>
         <section class="menu-estrella">
             <h2>Platos Principales</h2>
