Estilos y colores de alergenos aplicados

--- a/menu_estrella.html
+++ b/menu_estrella.html
@@ -18,30 +18,43 @@
     </nav>
     </div>
     <main>
+        <div class="contenido">
         <section class="menu-estrella">
             <h2>Platos Principales</h2>
             <ul>
                 <li data-alergenos="nueces mariscos">Ensalada Mediterránea con Nueces y Gambas</li>
                 <li data-alergenos="nueces">Tarta de Chocolate y Nueces</li>
                 <li data-alergenos="mariscos">Paella de Mariscos</li>
-                <li>Sopa de Verduras</li>
-                <!-- Más platos aquí -->
+                <li data-alergenos="verduras">Sopa de Verduras</li>
+                <li data-alergenos="lacteos">Pasta con salsa de tomate y queso rallado</li>
+                <li data-alergenos="huevo">Tortilla francesa</li>            
             </ul>
 
             <h2>Entrantes</h2>
             <ul>
-                <!-- Ítems de entrantes aquí -->
+                <li data-alergenos="lacteos">Canelones de espinacas</li>
+                <li data-alergenos="huevo jamon">Huevos rotos</li>
+                <li data-alergenos="gluten">Bruschetta de tomate y albahaca</li>
+                <li data-alergenos="lacteos">Queso feta con acitunas y hierbas</li>
             </ul>
 
             <h2>Postres</h2>
             <ul>
-                <!-- Ítems de postres aquí -->
+                <li data-alergenos="lacteos">Tiramisú</li>
+                <li data-alergenos="lacteos">Brownies</li>
+                <li data-alergenos="chocolate">Mousse de chocolate</li>
+                <li data-alergenos="fruta">Panna Cotta</li>
             </ul>
         </section>
+        </div>
     </main>
-
-    <footer>
-        <!-- Información del pie de página aquí -->
-    </footer>
+    <div class="pie">
+    
+        © 2024 Restaurante Gusteau's - París, Francia<br>
+            <a href="#sobrenosotros">Sobre Nosotros</a>
+            <a href="#menu">Menú</a>
+            <a href="#contacto">Contacto</a>
+    
+    </div>
 </body>
 </html>
