Estilso css acabados

--- a/menu_estrella.html
+++ b/menu_estrella.html
@@ -35,7 +35,7 @@
                 <li data-alergenos="lacteos">Canelones de espinacas</li>
                 <li data-alergenos="huevo jamon">Huevos rotos</li>
                 <li data-alergenos="gluten">Bruschetta de tomate y albahaca</li>
-                <li data-alergenos="lacteos">Queso feta con acitunas y hierbas</li>
+                <li data-alergenos="lacteos">Queso feta con aceitunas y hierbas</li>
             </ul>
 
             <h2>Postres</h2>
